force-app/main/default/objects/Resume_Package__c/Resume_Package__c.object-meta.xml
<CustomObject>
    <description>Holds generated resume packages tied to a Job Posting, including resume content, cover letter, generation status, and customizations.</description>
    <label>Resume Package</label>
    <nameField>
        <displayFormat>RP-{00000}</displayFormat>
        <label>Resume Package Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resume Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>