force-app/main/default/objects/Resume_Package__c/fields/Cover_Letter__c.field-meta.xml
<CustomField>
    <fullName>Cover_Letter__c</fullName>
    <description>The generated cover letter content</description>
    <inlineHelpText>Paste or generate the cover letter here.</inlineHelpText>
    <label>Cover Letter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>