force-app/main/default/objects/Resume_Package__c/fields/Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>Generated_Date__c</fullName>
    <description>Date when the resume package was generated</description>
    <inlineHelpText>When this package was last generated.</inlineHelpText>
    <label>Generated Date</label>
    <type>DateTime</type>
</CustomField>