force-app/main/default/objects/Resume_Package__c/fields/Job_Posting_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Application_Status__c</fullName>
    <description>Application status from the linked job posting</description>
    <inlineHelpText>Auto-populated from the linked job posting.</inlineHelpText>
    <label>Job Posting Application Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>