force-app/main/default/objects/Resume_Package__c/fields/Job_Posting_Company_Headquarters__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Company_Headquarters__c</fullName>
    <description>Company headquarters from the linked job posting analysis</description>
    <inlineHelpText>Auto-populated from the linked job posting.</inlineHelpText>
    <label>Job Posting Company Headquarters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>