force-app/main/default/objects/Resume_Package__c/fields/Job_Posting_Company_Team_Size__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Company_Team_Size__c</fullName>
    <description>Company team size from the linked job posting analysis</description>
    <inlineHelpText>Auto-populated from the linked job posting.</inlineHelpText>
    <label>Job Posting Company Team Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>