force-app/main/default/objects/Resume_Package__c/fields/Job_Posting_Company_Values_and_Culture__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Company_Values_and_Culture__c</fullName>
    <description>Company values and culture from the linked job posting analysis</description>
    <inlineHelpText>Auto-populated from the linked job posting.</inlineHelpText>
    <label>Job Posting Company Values and Culture</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>