force-app/main/default/objects/Resume_Package__c/fields/Job_Posting_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Description__c</fullName>
    <description>Description from the linked job posting</description>
    <inlineHelpText>Auto-populated from the linked job posting.</inlineHelpText>
    <label>Job Posting Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>