force-app/main/default/objects/Resume_Package__c/fields/Job_Posting_Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Employee_Count__c</fullName>
    <description>Employee count from the linked job posting analysis</description>
    <inlineHelpText>Auto-populated from the linked job posting.</inlineHelpText>
    <label>Job Posting Employee Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>