force-app/main/default/objects/Resume_Package__c/fields/Job_Posting_Expertise_Match__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Expertise_Match__c</fullName>
    <description>Expertise match from the linked job posting analysis</description>
    <inlineHelpText>Auto-populated from the linked job posting.</inlineHelpText>
    <label>Job Posting Expertise Match</label>
    <length>255</length>
    <type>Text</type>
</CustomField>