force-app/main/default/objects/Resume_Package__c/fields/Job_Posting_Green_Flags__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Green_Flags__c</fullName>
    <description>Green flags from the linked job posting analysis</description>
    <inlineHelpText>Auto-populated from the linked job posting.</inlineHelpText>
    <label>Job Posting Green Flags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>