force-app/main/default/objects/Resume_Package__c/fields/Job_Posting_Location__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Location__c</fullName>
    <description>Location from the linked job posting</description>
    <inlineHelpText>Auto-populated from the linked job posting.</inlineHelpText>
    <label>Job Posting Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>