force-app/main/default/objects/Resume_Package__c/fields/Job_Posting_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Name__c</fullName>
    <description>Display name for the linked job posting</description>
    <inlineHelpText>Auto-populated from the linked job posting.</inlineHelpText>
    <label>Job Posting Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>