force-app/main/default/objects/Resume_Package__c/fields/Job_Posting_ND_Friendliness_Details__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_ND_Friendliness_Details__c</fullName>
    <description>ND friendliness details from the linked job posting analysis</description>
    <inlineHelpText>Auto-populated from the linked job posting.</inlineHelpText>
    <label>Job Posting ND Friendliness Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>