force-app/main/default/objects/Resume_Package__c/fields/Job_Posting_ND_Friendliness_Score__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_ND_Friendliness_Score__c</fullName>
    <description>ND friendliness score from the linked job posting analysis</description>
    <inlineHelpText>Auto-populated from the linked job posting.</inlineHelpText>
    <label>Job Posting ND Friendliness Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>