force-app/main/default/objects/Resume_Package__c/fields/Job_Posting_Red_Flags__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Red_Flags__c</fullName>
    <description>Red flags from the linked job posting analysis</description>
    <inlineHelpText>Auto-populated from the linked job posting.</inlineHelpText>
    <label>Job Posting Red Flags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>