force-app/main/default/objects/Resume_Package__c/fields/Job_Posting_Remote_Policy__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Remote_Policy__c</fullName>
    <description>Remote policy from the linked job posting</description>
    <inlineHelpText>Auto-populated from the linked job posting.</inlineHelpText>
    <label>Job Posting Remote Policy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>