force-app/main/default/objects/Resume_Package__c/fields/Job_Posting_Research_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Research_Date__c</fullName>
    <description>Date when the linked job posting was analyzed</description>
    <inlineHelpText>Auto-populated from the linked job posting.</inlineHelpText>
    <label>Job Posting Research Date</label>
    <type>DateTime</type>
</CustomField>