force-app/main/default/objects/Resume_Package__c/fields/Job_Posting_Research_JSON__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Research_JSON__c</fullName>
    <description>Full Claude response from the linked job posting analysis</description>
    <inlineHelpText>Auto-populated from the linked job posting.</inlineHelpText>
    <label>Job Posting Research JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>