force-app/main/default/objects/Resume_Package__c/fields/Job_Posting_Salary_Max__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Salary_Max__c</fullName>
    <description>Maximum salary from the linked job posting</description>
    <inlineHelpText>Auto-populated from the linked job posting.</inlineHelpText>
    <label>Job Posting Salary Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>