force-app/main/default/objects/Resume_Package__c/fields/Job_Posting_URL__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_URL__c</fullName>
    <description>URL to the original job posting</description>
    <inlineHelpText>Auto-populated from the linked job posting.</inlineHelpText>
    <label>Job Posting URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>