force-app/main/default/objects/Resume_Package__c/fields/Job_Posting_Workplace_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Workplace_Type__c</fullName>
    <description>Workplace type from the linked job posting</description>
    <inlineHelpText>Auto-populated from the linked job posting.</inlineHelpText>
    <label>Job Posting Workplace Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>