force-app/main/default/objects/Resume_Package__c/fields/Last_Analyzed__c.field-meta.xml
<CustomField>
    <fullName>Last_Analyzed__c</fullName>
    <description>Date when the job posting was last analyzed for this package</description>
    <inlineHelpText>When the job posting was last analyzed to generate this package.</inlineHelpText>
    <label>Last Analyzed</label>
    <type>DateTime</type>
</CustomField>