force-app/main/default/objects/Resume_Package__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to the Opportunity this resume package was generated for</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Resume Packages</relationshipLabel>
    <relationshipName>Resume_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>