force-app/main/default/objects/Resume_Package__c/fields/Resume_Content__c.field-meta.xml
<CustomField>
    <fullName>Resume_Content__c</fullName>
    <description>The generated resume content (tailored to the job)</description>
    <inlineHelpText>Paste or generate the resume content here.</inlineHelpText>
    <label>Resume Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>